# xcmake

./: CMakeLists.txt  CMaker.cpp  CMaker.h  CMakerTests.cpp  CbpPatcher.cpp  CbpPatcher.h  CbpPatcherTests.cpp  Config.cpp  Config.h  ConfigTests.cpp  LICENSE  README.md  file_system.cpp  file_system.h  main.cpp  test.sh
tests/: CMakerTests.cpp  CbpPatcherTests.cpp  ConfigTests.cpp  cmaker.json  runtests.cpp  testproject_input.cbp  testproject_output.cbp.xml
tests/data/: cmaker.json  testproject_input.cbp  testproject_output.cbp.xml
